fix: align code to grid

--- a/services/web-app/components/code/code.module.scss
+++ b/services/web-app/components/code/code.module.scss
@@ -17,8 +17,6 @@
 }
 
 .code {
-  //override carbon max width align to grid
-  max-width: 100%;
   margin-top: 1.5rem;
 }
 
